--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://kkim-hugo.surge.sh/"
 languageCode = "en-us"
 title = "Kyu's Hugo Site"
 theme = "ananke"
